Change criteria query endpoint, add offer by id endpoint
